--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
 
 * {
   font-family: 'Poppins', sans-serif;
+
+}
+
+body {
   background-color: #161722;
   color: #cacde8;
+  overflow-x: hidden;
 }
